<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:iconTint="@color/purple_700"
            android:title="@string/menu_home" />
    </group>

    <item android:title="User Information">
        <menu>
            <item android:id="@+id/nav_profile"
                android:icon="@drawable/profile"
                android:title="Profile"/>
        </menu>
    </item>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

    <item android:title="Additional Information">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about" />
        </menu>
    </item>


</menu>