<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:textAlignment="center"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/aboutUsImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/aboutimage" />

            <TextView
                android:id="@+id/purposeTextview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="Purpose "
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutUsImage" />

            <TextView
                android:id="@+id/purposeView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Student Life's purpose is to help grade schoolers improve in certain subject areas where there is room for improvement. There is an array of subjects to choose from such as Mathematics, Algebra, Statistics, etc.  "
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purposeTextview" />

            <TextView
                android:id="@+id/authorsTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="Authors"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purposeView" />

            <TextView
                android:id="@+id/authorsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/authorsText1"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorsTextView" />

            <TextView
                android:id="@+id/authorsText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/authorsText2"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorsText1" />

            <TextView
                android:id="@+id/authorsText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/authorsText3"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorsText2" />

            <TextView
                android:id="@+id/authorsText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/authorsText4"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorsText3" />

            <TextView
                android:id="@+id/authorsText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/authorsText5"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorsText4" />

            <TextView
                android:id="@+id/authorsText11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/authorsText6"
                android:textColor="#673AB7"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorsText5"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sourcesTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="casual"
                android:text="Sources"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorsText6" />

            <ImageView
                android:id="@+id/firebaseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp"
                app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sourcesTextView"
                app:srcCompat="@drawable/free" />

            <ImageView
                android:id="@+id/flatImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-160dp"
                app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:srcCompat="@drawable/flaticon" />

            <ImageView
                android:id="@+id/pixlrImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-160dp"
                app:srcCompat="@drawable/pixel" />

            <ImageView
                android:id="@+id/adobeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-150dp"
                app:srcCompat="@drawable/adobe" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>